<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VRAJ</string>
    <string name="country_prompt">Wählen Sie Ihr Handymarkt aus</string>

    <string-array name="manufacturer_arrays">

        <item>Huawei</item>
        <item>IPhone</item>
        <item>Samsung</item>
        <item>Nokia</item>
        <item>Motorela</item>
        <item>Wiko</item>
        <item>HTC</item>
        <item>LG</item>
        <item>OnePlus</item>
        <item>Oppo</item>
        <item>Sony</item>
        <item>Vivo</item>
        <item>ZTE</item>

    </string-array>

    <string-array name="age_arrays">

        <item>ein Monat oder weniger</item>
        <item>von 1 bis 6 Monate</item>
        <item>mehr als 6 Monate</item>

    </string-array>

    <string-array name="theft_protection_arrays">

        <item>Ja</item>
        <item>Nein</item>

    </string-array>


    // Hier hab ich meine Sachen als String Referenz hinterlegt.

    <string name="signup">Zur Anmeldung</string>
    <string name="withoutregistration">Ohne Anmeldung fortfahren</string>
    <string name="shutdownapp">App beenden</string>


    <string name="selectionofservices">Der sicherste Weg zum Kredit und Handy-Versicherung</string>
    <string name="mobilephoneinsurance">Handy\nVersicherung</string>
    <string name="credit">Kredit</string>
    <string name="aboutus">Über uns</string>

    <string name="creditvolume">Kreditvolumen</string>
    <string name="defaultnumber">0</string>
    <string name="creditperiod">Kreditlaufzeit</string>
    <string-array name="credit_arrays">
        <item>1 Jahr</item>
        <item>2 Jahre</item>
        <item>3 Jahre</item>
        <item>4 Jahre</item>
        <item>5 Jahre</item>
        <item>6 Jahre</item>
        <item>7 Jahre</item>
    </string-array>
    <string name="formofpayment">Tilgungsform</string>
    <string-array name="formofpayment_arrays">
        <item>Tilgungsdarlehen</item>
        <item>Annuitätendarlehen</item>
    </string-array>
    <string name="annuity">Annuitätendarlehen</string>
    <string name="repayment">Tilgungsdarlehen</string>
    
    <string name="continue_button">Weiter</string>
    <string name="faq">Häufige Fragen:</string>
    <string name="credit_faq">- Was ist der Unterschied zwischen den Tilgungsformen?
        \n- Welche Tilgungsform ist günstiger? \n</string>
    <string name="information">Informationen</string>

    <string name="falseinput">Sie haben eine ungültige Eingabe eingetragen!</string>

    <string name="creditvolumehigh">Ihr ausgewähltes Kreditvolumen ist zu hoch! \n
 Wir vergeben nur Kredite bis zu 10 Millionen Euro!</string>
    <string name="creditvolumelow">Ihr ausgewähltes Kreditvolumen ist zu niedrig! \n
        Wir vergeben nur Kredite ab 500 Euro!</string>

    <string name="annualpercentagerate">Jährlicher Prozentsatz</string>

    <string name="yearlyrepaymentrate">Jährliche Tilgungsrate</string>
    <string name="repaymentrate">Tilgungs- \n rate</string>

    <string name="plusvariableinterest">Zzgl. variabler Zinsen</string>
    <string name="annuityrate">Annuitäts- \n rate</string>
    <string name="createrepaymentplan">Tilgungsplan Erstellen</string>

    <string name="repaymentamount">Rückzahlungsumme:</string>
    <string name="year">Jahr \n</string>
    <string name="remainingdebt">Rest- \nschuld</string>
    <string name="interests">Zinsen \n</string>
    <string name="manufacturer">Hersteller</string>
    <string name="devices_age">Gerätealter </string>
    <string name="theft_protection">Diebstahlschutz </string>
    <string name="tp">DsV </string>
    <string name="Purchase_price">Kaufpreis in €</string>
    <string name="next_button">weiter</string>
    <string name="back_button">zurück</string>
    <string name="info_questions">- Welche Schäden deckt VRAJ-Versicherung ab?
                        \n- Bei wem melde ich einen Schaden?
                        \n- Wie lange dauert die Bearbeitung eines Schadenfalls?
                        \n- Was ist zu beachten, wenn ich als versicherte Person nicht der Käufer des Handys bin?
                        \nDrücken Sie auf Informationen, um die Antworten zu schauen</string>
    <string name="result">Ergebnis</string>
    <string name="monthly">monatlich: </string>
    <string name="singup_subject">Registrierung</string>
    <string name="e_mail">benutzername@example.de</string>
    <string name="mail">E-Mail</string>
    <string name="password">Kennwort</string>
    <string name="password_r">Kennwort wiederholen</string>
    <string name="registration">Anmeldung</string>
    <string name="registrating">anmelden</string>
    <string name="have_not_count">Haben Sie kein Konto? </string>
    <string name="contract_send">Beratungstermin ausmachen</string>
    <string name="c_subject">Beratungsanfrage</string>
    <string name="nameEdit">Vorname</string>
    <string name="lastnameEdit">Nachname</string>
    <string name="berthdayEdit">01/01/1990</string>
    <string name="date">Geburtsdatum</string>
    <string name="adress">Adresse</string>

    <string name="info_seite"><b>VRAJ: <u>V</u>ersicherung <u>R</u>echner <u>A</u>bdulkader <u>J</u>ürgen</b>
        \n<b>Unsere Leistungen:</b>
        \  - Handyversicherung - Kredit
        \n
        \n<b><font fgcolor="#ff9a1d1d">Handyversicherung:</font></b>
        \n
        \n  <b>- Display- und Bruchschäden: Displaybruch </b>ist der häufigste Handy Schaden. Dabei fällt das Handy auch meist nicht direkt aus der Hand.
        \n  - Flüssigkeitsschäden: Bei Flüssigkeitsschäden oder Wasserschäden gibt es die glimpflichen Situationen, in denen der Bildschirm trocken gewischt wird und alles noch funktioniert. Aber dann sind da noch die Situationen, in denen das Handy ein Vollbad genommen hat und nicht mehr reagiert. Oft enden diese in einem Total Schaden
        \n  - Handy-Diebstahl: Die Friendsurance Handyversicherung mit Diebstahlschutz übernimmt sowohl einfachen Diebstahl (Handy wurde in einer verschlossenen Tasche oder nah am Körper, z.B. in der Jackeninnentasche mitgeführt und trotzdem gestohlen), als auch Einbruchdiebstahl (das Handy wurde aus einem geschlossenen Raum gestohlen, durch gewaltsames Eindringen) und Raub (Ihnen wurde mit Gewalt gedroht, wenn Sie das Handy nicht hergeben). Diebstahl gehört zu den teuersten Schäden, weil das Handy gänzlich ersetzt werden muss.
        \n
        \n<b>Häufige Fragen:</b>
        \n
        \n<b><font fgcolor="#ff9a1d1d">Bei wem melde ich einen Schaden?</font></b>
        \n  - Sie können sich direkt bei uns melden, unter <b>+49 15771931956 - +49 15776441106</b> oder per E-Mail <b>ebdo93@gmail.com  - juergen-mayer.1@gmx.de</b>
        \n
        \n<b><font fgcolor="#ff9a1d1d">Was ist zu beachten, wenn ich als versicherte Person nicht der Käufer des Handys bin?</font></b>
        \n  - Unterscheiden sich versicherte Person und Käufer, so benötigen wir hierfür eine schriftliche Erklärung. In dieser muss der Käufer des Gerätes versichern, dass das Handy von der versicherten Person genutzt wird.
        \n
        \n<b><font fgcolor="#ff9a1d1d">Welche Schäden deckt eine Handyversicherung ab?</font></b>
        \n  - Welche Schäden genau von der Handyversicherung abgedeckt werden, hängt von dem gewählten Tarif ab. In der Regel versichert:
        \n  - Display- und Bruchschäden
        \n  - Schäden durch Überspannung, Brand und Flüssigkeit.
        \n
        \n<b><font fgcolor="#ff9a1d1d">Wie lange dauert die Bearbeitung eines Schadensfalls?</font></b>
        \n  - Unsere Versicherer arbeiten mit unterschiedlichen Reparaturdienstleistern. Die Reparatur dauert, abhängig vom Anbieter, zwischen zwei bis zehn Werktage. Sie können uns helfen, diese Zeit zu verkürzen, indem Sie uns direkt alle notwendigen Unterlagen – zum Beispiel Kaufbeleg und Schadensmeldung – zusammen mit dem defekten Gerät einsenden. Details hierzu entnehmen Sie bitte der Anleitung, die wir Ihnen im Schadensfall zukommen lassen.
        \n
        \n
        \n<b><font fgcolor="#ff0000">Wichtig: Damit Ihr Schaden schnellstmöglich bearbeitet wird und Sie Ihr Handy schnell wieder benutzen können, sollten Sie ihn umgehend der Handyversicherung melden. Generell haben Sie laut Handy Schutzbrief von Assurant Solutions die Pflicht, diesen bis 14 Tage nach Entdecken zu melden. Sonst ist die Versicherung nicht verpflichtet, den Schaden zu regulieren.</font></b>
        \n
        \n<b><font fgcolor="#0000ff">Kredit</font></b>
        \n
        \n<b><font fgcolor="#0000ff">Was ist der Unterschied zwischen Tilungs- und Annuitätendarlehnen?</font></b>
        \n
        \n Bei einem Annuitäten Darlehen ist die Summe, die man nach einem bestimmten Intervall zurückzahlen muss, zu jeder Zeit gleich.\n
         Bei einem Tilgungsdarlehen dagegen ist der Tilgungsbetrag immer gleich. \n
        Die Annuität, also die Rückzahlungssumme bei einer Rate, setzt sich aus zwei Komponenten zusammen:
        \n
        \n
         - Den Zinsen und \n
         - der Tilgungsrate \n
        \n
         Die Tilgungsrate beschreibt dabei die Summe, die man für die Rückzahlung des Kredits aufwendet. \n
         Die Zinsen werden auf Basis der Restschuld berechnet.
        \n
        \n <b>Vor- und Nachteile der Tilgungsformen</b> \n
        \n
        <b><font fgcolor="#0000ff">Vorteile Tilgung</font></b>\n
        \n
        - Der Tilgungsdarlehen ist im Vergleich zum Annuiätendarlehnen günstiger. \n
        \n
        - Der Tilgungsbetrag ist von Anfang höher, was schlussendlich dazu führt, dass man weniger Zinsen zurückzahlen muss. \n
        \n
        <b><font fgcolor="#0000ff">Nachteile Tilgung</font></b> \n
        \n
        Die Rate die man in einem bestimmten Intervall an die Bank zurück zahlen muss, ist nicht immer gleich! Was schlechtere Planungssicherheit bringt. \n
        \n
        - Die finanzielle Belastung ist am Anfang höher als bei dem Annuiätendarlehen, was sich aber mit dem weiteren Verlauf aber umkehrt. \n
        \n
        <b><font fgcolor="#0000ff">Vorteile Annuität</font></b> \n
        \n
        - Die Ratenzahlung, besser gesagt die Annuität, die man an die Bank zurückzahlt, ist immer gleich! Was zu Planungssicherheit führt. \n
        \n
        - Die anfängliche Belastung ist im Vergleich zum Tilgungsdarlehen geringer, was sich allerdings mit der Zeit umgekehrt. \n
        \n
        <b><font fgcolor="#0000ff">Nachteile Annuität</font></b> \n
        \n
        - Die Annuiätendarlehen ist teurer als der Tilgungsdarlehen!
    </string>

</resources>