<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/anmeldungBetreff1"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="40sp"
        android:text="@string/registration"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:background="#eee"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userEingabe1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/mail"/>

        <EditText
            android:id="@+id/ediUser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="30"
            android:hint="@string/e_mail" />

        <TextView
            android:id="@+id/passEingabe1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/ediPass1"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="30"
            android:hint="@string/password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/backB1"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                android:textAllCaps="false"
                android:layout_below="@+id/editText5"
                android:layout_alignEnd="@+id/editText5"
                android:enabled="true" />

            <Button
                android:id="@+id/next1"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:text="@string/registrating"
                android:textAllCaps="false"
                android:layout_below="@+id/editText5"
                android:layout_alignEnd="@+id/editText5"
                android:enabled="true" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/neuKonto"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:text="@string/have_not_count"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
</ScrollView>